[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/fonts/m6x11.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/audio/hitSound.wav" type="AudioStream" id=4]
[ext_resource path="res://Base.png" type="Texture" id=5]
[ext_resource path="res://Scenes/t1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/t2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/t2.gd" type="Script" id=8]
[ext_resource path="res://Scenes/t1.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=2]
radius = 34.8838
height = 83.6955

[sub_resource type="CapsuleShape2D" id=3]
radius = 36.3814
height = 82.7196

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 0.987821, 0.982676 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_top = 1.01763
margin_right = 1015.0
margin_bottom = 616.018
color = Color( 0.168627, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="t2" parent="." instance=ExtResource( 7 )]
position = Vector2( 855.149, 280.987 )
script = ExtResource( 8 )

[node name="t1" parent="." instance=ExtResource( 6 )]
position = Vector2( 67.5977, 284.572 )
script = ExtResource( 9 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 20.1225, 231.483 )

[node name="Sprite" type="Sprite" parent="Player1"]
position = Vector2( 43.2415, -2.71675 )
texture = ExtResource( 5 )
hframes = 4
vframes = 4
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2( 40.5389, 8.15021 )
shape = SubResource( 2 )

[node name="Player2" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 580.765, 186.657 )

[node name="Sprite2" type="Sprite" parent="Player2"]
position = Vector2( 172.966, 50.2598 )
texture = ExtResource( 5 )
hframes = 4
vframes = 4
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 172.966, 50.2598 )
shape = SubResource( 3 )

[node name="MiddleField" type="ColorRect" parent="."]
margin_left = 508.0
margin_top = -100.0
margin_right = 512.0
margin_bottom = 700.0
color = Color( 0.690196, 0.662745, 0.662745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayMessage" type="Label" parent="."]
margin_left = 226.0
margin_top = 500.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 1 )
text = "Press SPACE to start!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Score" type="Label" parent="."]
margin_left = 430.0
margin_top = 30.0
margin_right = 472.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "0"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Score" type="Label" parent="."]
margin_left = 552.0
margin_top = 30.0
margin_right = 594.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "0"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
